When creating a virtual server inside a Solaris zone, existing virtual IPs in the zone can be selected for domains that need a private IP.
When editing server templates, fields that are not used because they are inheriting from the Default Settings are now greyed out.
Added a link for copying the default settings template, rather than creating an empty template which inherits from it.
The old one file per directory backup format is no longer available, unless already selected.
Optimized the collectinfo.pl program, which generates the right-side system information frame.
---- Changes since 3.39 ----
Updated the SugarCRM script installer to version 4.5.1c.
Password restrictions set in the Users and Groups module are now checked when creating or saving a domain.
Webmin libraries are not pre-loaded into memory for performance if the system has less than 256M RAM.
Updated the TWiki script install to redirect /twiki (or whatever path is selected) to /cgi-bin/twiki/view, which actually shows the Wiki. 
Added a section to the Spam and Virus Delivery page for changing the virus scanner to use for existing domains, for choosing between clamscan and clamdscan. Also made it easier to change the default for this on the Module Config page.
Updated the modify-spam.pl program to add the --use-clamscan and --use-clamdscan program.
When a virtual server with a website and private IP address is deleted, any Listen directives added for its IP are removed from the Apache configuration.
Added a Module Config option to change the default SSL key size, and increased the default to 1024 bits.
Added Module Config options for choosing different locations for servers' SSL certificate and key files.
The PHP module mcrypt is now only recommended when installing phpMyAdmin, but not strictly required.
Added a button on the Install Scripts for upgrading several to the latest version at once.