@@ -365,6 +365,7 @@ setup_webalias=Updating target virtual website ..
 setup_ewebalias=.. failed to find target virtual website!
 setup_openssl=Creating SSL certificate and private key ..
 setup_ssl=Adding new SSL virtual website ..
+setup_esslcopy=.. could not find non-SSL virtual website to copy directives from!
 setup_eopenssl=.. openssl failed! $1
 setup_webpid=Applying web server configuration ..
 setup_webpid2=Stopping and re-starting web server ..
